--- a/product-service/buildspec.yml
+++ b/product-service/buildspec.yml
@@ -16,6 +16,7 @@ phases:
     commands:
       - echo Building the Docker image...
       - cd product-service
+      - npm install
       - docker build -t $IMAGE_REPO_NAME .
       - docker tag $IMAGE_REPO_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
   post_build:
