--- a/user-service/buildspec.yml
+++ b/user-service/buildspec.yml
@@ -15,7 +15,8 @@ phases:
   build:
     commands:
       - echo Building the Docker image...
-      - cd product-service
+      - cd user-service
+      - npm install
       - docker build -t $IMAGE_REPO_NAME .
       - docker tag $IMAGE_REPO_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
   post_build:
